src/tests/functionality/assignment_4_control_flow/invalid_syntax/04_case_missing_colon.c
int main() {
    int x = 1;
    int result = 0;

    switch (x) {
        case 1
            result = 10;
            break;

        default:
            result = 20;
            break;
    }

    return result;
}